# overproto-c

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/toolchains/: mingw-w64.cmake
examples/: simple_client.c  simple_server.c
src/api/: overproto.c
src/core/: common.h  crc32.c  crc32.h  fragment.c  fragment.h  packet.c  packet.h
src/include/: overproto.h
src/optimize/: compress.c  compress.h  crypto.c  crypto.h
src/transport/: reliable.c  reliable.h  tcp.c  tcp.h  udp.c  udp.h
